<?xml version="1.0"?>
<package format="3">
  <name>ros2_safety_monitor</name>
  <version>0.0.1</version>
  <description>Safety zone monitoring node for robot positions.</description>

  <maintainer email="s24c1131sc@s.chibakoudai.jp">Daiki Yamashita</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>pytest</test_depend>

  <export></export>
</package>

